// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CategoriesTableRow /> should render "Uncategorized articles" row when shouldRenderRowWithoutArticles is false but there are some uncategorized articles 1`] = `
<div>
  <tr
    class="row row"
  >
    <td
      class="wrapper normal"
    >
      <div
        class="cellContent"
      />
    </td>
    <td
      class="wrapper cell normal"
    >
      <div
        class="cellContent"
      >
        <span
          class="caret material-icons"
        >
          arrow_right
        </span>
        <span
          class=""
          id="category-title-uncategorized"
        >
          Uncategorized articles
        </span>
        <span
          class="count badge badge-light badge-pill"
        >
          1
        </span>
      </div>
    </td>
    <td
      class="wrapper normal"
    >
      <div
        class="cellContent"
      />
    </td>
    <td
      class="wrapper normal"
    >
      <div
        class="cellContent"
        style="width: 120px;"
      />
    </td>
  </tr>
</div>
`;

exports[`<CategoriesTableRow /> should render category row loading then idle: Idle state 1`] = `
<div>
  <tr
    class="row droppable-row"
    data-handler-id="T0"
    style="opacity: 1;"
  >
    <td
      class="wrapper normal"
      style="width: 25px;"
    >
      <div
        class="cellContent"
      >
        <div
          class="drag-handler material-icons"
          draggable="true"
        >
          drag_indicator
        </div>
      </div>
    </td>
    <td
      class="wrapper cell normal"
    >
      <div
        class="cellContent no-click"
      >
        <span
          class="caret material-icons"
        >
          arrow_right
        </span>
        <span
          class=""
          id="category-title-5"
        >
          Category 1
        </span>
        <span
          class="count badge badge-light badge-pill"
        >
          1
        </span>
      </div>
    </td>
    <td
      class="wrapper normal"
      style="min-width: 104px; width: 104px;"
    >
      <div
        class="cellContent no-click"
      >
        <div
          class="language-bullet-list"
        >
          <div
            class="language-bullet-item"
            data-testid="locale-bullet-en-US"
          >
            <img
              alt="en-US"
              class="flag-emoji"
              data-testid="flag-en-US"
              src="test-file-stub"
            />
          </div>
        </div>
      </div>
    </td>
    <td
      class="wrapper normal"
      style="min-width: 120px; width: 104px;"
    >
      <div
        class="cellContent actions no-click"
      >
        <div
          class="action-list"
        >
          <button
            class="action material-icons"
            data-testid="categorySettings"
            id="categorySettings-5"
          >
            settings
          </button>
          <button
            class="action material-icons"
            data-testid="createNestedCategory"
            id="createNestedCategory-5"
          >
            playlist_add
          </button>
          <button
            class="action material-icons"
            data-testid="createNestedArticle"
            id="createNestedArticle-5"
          >
            note_add
          </button>
        </div>
      </div>
    </td>
  </tr>
</div>
`;

exports[`<CategoriesTableRow /> should render category row loading then idle: Loading state 1`] = `
<div>
  <tr
    class="row droppable-row"
    data-handler-id="T0"
    style="opacity: 1;"
  >
    <td
      class="wrapper normal"
      style="width: 25px;"
    >
      <div
        class="cellContent"
      >
        <div
          class="drag-handler material-icons"
          draggable="true"
        >
          drag_indicator
        </div>
      </div>
    </td>
    <td
      class="wrapper cell normal"
    >
      <div
        class="cellContent no-click"
      >
        <span
          class="caret material-icons"
        >
          arrow_right
        </span>
        <span
          class=""
          id="category-title-5"
        >
          Category 1
        </span>
        <span
          class="count badge badge-light badge-pill"
        >
          1
        </span>
      </div>
    </td>
    <td
      class="wrapper normal"
      style="min-width: 104px; width: 104px;"
    >
      <div
        class="cellContent no-click"
      >
        <div
          class="language-bullet-list"
        >
          <div
            class="language-bullet-item"
            data-testid="locale-bullet-en-US"
          >
            <img
              alt="en-US"
              class="flag-emoji"
              data-testid="flag-en-US"
              src="test-file-stub"
            />
          </div>
        </div>
      </div>
    </td>
    <td
      class="wrapper normal"
      style="min-width: 120px; width: 104px;"
    >
      <div
        class="cellContent actions no-click"
      >
        <div
          class="action-list"
        >
          <button
            class="action material-icons"
            data-testid="categorySettings"
            id="categorySettings-5"
          >
            settings
          </button>
          <button
            class="action material-icons"
            data-testid="createNestedCategory"
            id="createNestedCategory-5"
          >
            playlist_add
          </button>
          <button
            class="action material-icons"
            data-testid="createNestedArticle"
            id="createNestedArticle-5"
          >
            note_add
          </button>
        </div>
      </div>
    </td>
  </tr>
</div>
`;

exports[`<CategoriesTableRow /> should render category that has children 1`] = `
<div>
  <tr
    class="row droppable-row"
    data-handler-id="T2"
    style="opacity: 1;"
  >
    <td
      class="wrapper normal"
      style="width: 25px;"
    >
      <div
        class="cellContent"
      >
        <div
          class="drag-handler material-icons"
          draggable="true"
        >
          drag_indicator
        </div>
      </div>
    </td>
    <td
      class="wrapper cell normal"
    >
      <div
        class="cellContent no-click"
      >
        <span
          class="caret material-icons"
        >
          arrow_right
        </span>
        <span
          class=""
          id="category-title-5"
        >
          Category 1
        </span>
        <span
          class="count badge badge-light badge-pill"
        >
          1
        </span>
      </div>
    </td>
    <td
      class="wrapper normal"
      style="min-width: 104px; width: 104px;"
    >
      <div
        class="cellContent no-click"
      >
        <div
          class="language-bullet-list"
        >
          <div
            class="language-bullet-item"
            data-testid="locale-bullet-en-US"
          >
            <img
              alt="en-US"
              class="flag-emoji"
              data-testid="flag-en-US"
              src="test-file-stub"
            />
          </div>
        </div>
      </div>
    </td>
    <td
      class="wrapper normal"
      style="min-width: 120px; width: 104px;"
    >
      <div
        class="cellContent actions no-click"
      >
        <div
          class="action-list"
        >
          <button
            class="action material-icons"
            data-testid="categorySettings"
            id="categorySettings-5"
          >
            settings
          </button>
          <button
            class="action material-icons"
            data-testid="createNestedCategory"
            id="createNestedCategory-5"
          >
            playlist_add
          </button>
          <button
            class="action material-icons"
            data-testid="createNestedArticle"
            id="createNestedArticle-5"
          >
            note_add
          </button>
        </div>
      </div>
    </td>
  </tr>
</div>
`;

exports[`<CategoriesTableRow /> should render null if shouldRenderRowWithoutArticles is false and there are no articles 1`] = `<div />`;
